# Pmetrics

./: .Rbuildignore  .Renviron  .Rprofile  .gitignore  .lintr  1comp.pkm  2comp.pkm  404.html  ANALYSIS.md  CODE_OF_CONDUCT.md  Cargo.toml  DESCRIPTION  LICENSE  LICENSE-text.html  NAMESPACE  PACKAGES  PACKAGES.rds  PM2.csv  PMchangelog.html  PMout.Rdata  Pmetrics.Rproj  PmetricsSource.Rproj  PmetricsStats.R  README.Rmd  README.html  README.md  README.qmd  _pkgdown.yml  authors.html  authors.md  compile.bat  compile.sh  compiled_model.pkm  contributing.md  dummy.csv  erl_crash.dump  errors.xlsx  extra.css  fit.rds  genmodel.txt  (+15 more)
.Rd2pdf65996/: Rd2.tex
.github/: copilot-instructions.md
1/: fit.Rdata  gendata.csv  model.txt
2/: fit.Rdata  model.txt
3/: fit.Rdata
Archived/: .gitignore  ArchivedFunctions.R  DataDescriptions.R  ERRrepScript.R  ERRrun.R  ITreport.R  ITrun.R  LegacyPlots.R  MMopt.R  NEWS  NEWS   NEWS.Rd   NPreport_old.R  NPrun.R  PM_model_old.R  PMcheckModel.R  PMdiag.R  PMfixMatrix.R  PMremote.R  PMupdate.R  Pmetrics.css  Pmetrics_0.40.tgz  Pmetrics_0.41.tgz  Pmetrics_1.0.tgz  Pmetrics_1.1.0.tgz  Pmetrics_1.1.1.tgz  Pmetrics_1.1.tgz  SIMparse.R  SIMrun.R  error.html  genAlquimiaData.R  makePTA.R  makePTA2.R  makePmetrics.R  modelLibrary.R  pkgdown.yml  plotPMdiag.R  plotPMdopt.R  plotPMfinal.R  plotPMnpde.R  (+4 more)
src/rust/: Cargo.toml
src/rust/src/: bestdose_executor.rs  bridge_errors.rs  build.rs  compile.rs  compiler.rs  execute.rs  executor.rs  fit_payload.rs  lib.rs  live.rs  logs.rs  settings.rs  simulation.rs
src/rust/tests/: panic_hook_test.rs
(+2645 files in other folders)
