[package]
name = 'pm_rs'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ['staticlib']
name = 'pm_rs'

[dependencies]
extendr-api = "0.9.0"
pmcore = { version = "=0.25.2", features = ["exa"] }
libloading = "0.9"

rayon = "1.10.0"
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
